flinkk8/example/example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meow-svc-n
spec:
  type: NodePort
  ports:
    - name: ui
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: meow
---
apiVersion: v1
kind: Service
metadata:
  name: meow-svc
spec:
  ports:
    - name: ui
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: meow
