flinkk8/example/example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meow-ingress-n
  #annotations:
  # nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: meow-svc-n
              servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meow-ingress
  #annotations:
  # nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: meow-svc
              servicePort: 8080
